[package]
name = "vbus-core"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.210", features = ["derive"]}

[dev-dependencies]
os_pipe = "1.2.1"
