[package]
name = "vbus-examples"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
vbus-core = { path =  "../vbus-core" }
vbus-sensors = { path =  "../vbus-sensors" }
